--- a/app/src/main/res/drawable/pad_button_background.xml
+++ b/app/src/main/res/drawable/pad_button_background.xml
@@ -15,5 +15,8 @@
   limitations under the License.
   -->
 
-<ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/pad_button_ripple_color" />
+<!--<ripple xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--android:color="@color/pad_button_ripple_color" />-->
+
+<color xmlns:android="http://schemas.android.com/apk/res/android"
+android:color="@color/pad_button_ripple_color" />
