--- a/app/src/main/res/layout/pad_standard.xml
+++ b/app/src/main/res/layout/pad_standard.xml
@@ -11,43 +11,57 @@
   limitations under the License.
   --><!--<com.android.calculator2.CalculatorNumericPadLayout--><!--<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:id="@+id/pad_numeric_ergonomic"--><!--style="@style/PadButtonStyle.Numeric"--><!--android:layout_width="match_parent"--><!--android:background="@color/pad_numeric_background_color"--><!--android:layout_height="match_parent"--><!--android:columnWidth="90dp"--><!--android:numColumns="auto_fit"--><!--android:verticalSpacing="10dp"--><!--android:horizontalSpacing="10dp"--><!--android:stretchMode="columnWidth"--><!--android:gravity="center">-->
 
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/pad_numeric"
+<!--<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--android:id="@+id/pad_numeric"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:background="@color/pankaj_pad_numeric_background_color_white"-->
+    <!--android:columnCount="4"-->
+    <!--android:orientation="horizontal"-->
+    <!--android:rowCount="6">-->
+
+<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/pad_standard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/pankaj_pad_numeric_background_color_white"
-    android:stretchMode="spacingWidth"
-    android:columnCount="4"
-    android:rowCount="6"
-    android:orientation="horizontal">
+    app:columnCount="4"
+    app:orientation="horizontal"
+    app:rowCount="1">
+
     <!--style="@style/PadButtonStyle.Numeric"-->
 
     <!--<TableRow>-->
     <Button
         android:id="@+id/buttonMemoryClear"
         style="@style/PadButtonStyle.Numeric.Memory"
-        android:onClick="calculateMe"
+        app:layout_columnWeight="1"
+        android:onClick="saveInMemory"
         android:tag="mc"
-        android:text="mc"/>
+        android:text="mc" />
 
     <Button
         android:id="@+id/buttonMemoryPlus"
         style="@style/PadButtonStyle.Numeric.Memory"
-        android:onClick="calculateMe"
+        app:layout_columnWeight="1"
+        android:onClick="saveInMemory"
         android:tag="m+"
         android:text="m+" />
 
     <Button
         android:id="@+id/buttonMemoryMinus"
         style="@style/PadButtonStyle.Numeric.Memory"
-        android:onClick="calculateMe"
+        app:layout_columnWeight="1"
+        android:onClick="saveInMemory"
         android:tag="m-"
         android:text="m-" />
 
     <Button
         android:id="@+id/buttonMemoryRead"
         style="@style/PadButtonStyle.Numeric.Memory"
-        android:onClick="calculateMe"
+        app:layout_columnWeight="1"
+        android:onClick="saveInMemory"
         android:tag="mr"
         android:text="mr" />
 
@@ -58,6 +72,7 @@
     <Button
         android:id="@+id/buttonInvert"
         style="@style/PadButtonStyle.Numeric.Operator"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="1/x"
         android:text="1/x" />
@@ -65,6 +80,7 @@
     <Button
         android:id="@+id/buttonBack"
         style="@style/PadButtonStyle.Numeric.Operator"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="C"
         android:text="C" />
@@ -72,6 +88,7 @@
     <Button
         android:id="@+id/buttonAllClear"
         style="@style/PadButtonStyle.Numeric.Operator"
+        app:layout_columnWeight="1"
         android:onClick="clearAll"
         android:tag="AC"
         android:text="AC" />
@@ -79,12 +96,11 @@
     <Button
         android:id="@+id/buttonDivide"
         style="@style/PadButtonStyle.Numeric.Operator"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="/"
         android:text="/" />
     <!--</TableRow>-->
-
-
 
 
     <!--</TableRow>-->
@@ -93,6 +109,7 @@
     <Button
         android:id="@+id/button7"
         style="@style/PadButtonStyle.Numeric"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="7"
         android:text="7" />
@@ -100,6 +117,7 @@
     <Button
         android:id="@+id/button8"
         style="@style/PadButtonStyle.Numeric"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="8"
         android:text="8" />
@@ -107,6 +125,7 @@
     <Button
         android:id="@+id/button9"
         style="@style/PadButtonStyle.Numeric"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="9"
         android:text="9" />
@@ -114,6 +133,7 @@
     <Button
         android:id="@+id/buttonMultiply"
         style="@style/PadButtonStyle.Numeric.Operator"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="*"
         android:text="*" />
@@ -124,6 +144,7 @@
     <Button
         android:id="@+id/button4"
         style="@style/PadButtonStyle.Numeric"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="4"
         android:text="4" />
@@ -131,6 +152,7 @@
     <Button
         android:id="@+id/button5"
         style="@style/PadButtonStyle.Numeric"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="5"
         android:text="5" />
@@ -138,6 +160,7 @@
     <Button
         android:id="@+id/button6"
         style="@style/PadButtonStyle.Numeric"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="6"
         android:text="6" />
@@ -145,6 +168,7 @@
     <Button
         android:id="@+id/buttonSubtract"
         style="@style/PadButtonStyle.Numeric.Operator"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="-"
         android:text="-" />
@@ -156,6 +180,7 @@
     <Button
         android:id="@+id/button1"
         style="@style/PadButtonStyle.Numeric"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="1"
         android:text="1" />
@@ -163,6 +188,7 @@
     <Button
         android:id="@+id/button2"
         style="@style/PadButtonStyle.Numeric"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="2"
         android:text="2" />
@@ -170,6 +196,7 @@
     <Button
         android:id="@+id/button3"
         style="@style/PadButtonStyle.Numeric"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="3"
         android:text="3" />
@@ -177,11 +204,10 @@
     <Button
         android:id="@+id/buttonAdd"
         style="@style/PadButtonStyle.Numeric.Operator"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="+"
         android:text="+" />
-
-
 
 
     <!--<TableRow>-->
@@ -191,12 +217,14 @@
     <Button
         android:id="@+id/buttonSignChange"
         style="@style/PadButtonStyle.Numeric"
+        app:layout_columnWeight="1"
         android:tag="+/-"
         android:text="+/-" />
 
     <Button
         android:id="@+id/button0"
         style="@style/PadButtonStyle.Numeric"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="0"
         android:text="0" />
@@ -204,6 +232,7 @@
     <Button
         android:id="@+id/buttonDecimal"
         style="@style/PadButtonStyle.Numeric"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="."
         android:text="." />
@@ -211,8 +240,9 @@
     <Button
         android:id="@+id/buttonEquals"
         style="@style/PadButtonStyle.Numeric.Equals"
+        app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="="
         android:text="=" />
 
-</GridLayout>
+</android.support.v7.widget.GridLayout>
