--- a/app/src/main/res/layout/display.xml
+++ b/app/src/main/res/layout/display.xml
@@ -15,7 +15,7 @@
         android:layout_weight=".2"
         android:background="@color/pankaj_pad_button_text_color_white"
         android:editable="false"
-        android:text="M 12500"
+        android:text=""
         android:textAlignment="viewStart"
         android:textSize="@dimen/_18sdp" />
 
