cleanup started for equation

--- a/app/src/main/res/layout/pad_standard.xml
+++ b/app/src/main/res/layout/pad_standard.xml
@@ -83,7 +83,7 @@
         app:layout_columnWeight="1"
         android:onClick="calculateMe"
         android:tag="BACK"
-        android:text="C" />
+        android:text="Bk" />
 
     <Button
         android:id="@+id/buttonAllClear"
