--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,14 +8,16 @@
     <color name="pankaj_pad_button_memory_text_color">#fefb45</color>
     <color name="pankaj_light_grey">#767676</color>
     <!--<color name="pankaj_light_pink">#FF4081</color>-->
-    <color name="pankaj_light_pink">#fd4785</color>
+    <!--<color name="pankaj_light_pink">#fd4785</color>-->
+    <color name="pankaj_light_pink">#fe0073</color>
 
     <color name="pankaj_results_text_color">#363636</color>
     <!-- Text color for a button in a pad. -->
     <color name="pankaj_pad_button_text_color_black">#040404</color>
     <color name="pankaj_pad_button_text_color_white">#ffffff</color>
     <color name="pankaj_pad_numeric_background_color_white">#ffffff</color>
-    <color name="pankaj_pad_color_blue">#015289</color>
+    <!--<color name="pankaj_pad_color_blue">#015289</color>-->
+    <color name="pankaj_pad_color_blue">#0f487f</color>
     <color name="pankaj_memory_display_color_blue">#1095bd</color>
 
     <!-- Default background color for the status bar. -->
