cleanup started for equation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,8 @@
     <color name="pankaj_light_pink">#fe0073</color>
     <color name="pankaj_dark_brown">#443d4e</color>
     <color name="pankaj_dark_yellow">#906b2a</color>
+    <color name="pankaj_dark_orange">#f86b00</color>
+
 
 
     <color name="pankaj_results_text_color">#363636</color>
