--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="pankaj_pad_button_memory_text_color">#fefb45</color>
     <color name="pankaj_light_grey">#767676</color>
     <!--<color name="pankaj_light_pink">#FF4081</color>-->
-    <!--<color name="pankaj_light_pink">#fd4785</color>-->
+    <color name="pankaj_light_pink">#ffe8f0</color>
     <color name="pankaj_dark_pink">#fe0073</color>
     <color name="pankaj_dark_brown">#443d4e</color>
     <color name="pankaj_dark_yellow">#906b2a</color>
