--- a/app/src/main/res/layout/display.xml
+++ b/app/src/main/res/layout/display.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -26,9 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_weight=".8"
         android:background="@color/pankaj_pad_button_text_color_white"
-        android:editable="false"
-        android:inputType="text"
         android:maxLines="1"
+        android:gravity="center"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:text="0"
@@ -49,7 +48,7 @@
         android:text="0"
         android:textAlignment="viewEnd"
         android:textColor="@color/pankaj_results_text_color"
-        android:textSize="@dimen/_22sdp" />
+        android:textSize="@dimen/_30sdp" />
 </LinearLayout>
 
     <!--<EditText--><!--android:id="@+id/textViewMemory"--><!--android:layout_width="match_parent"--><!--android:layout_height="wrap_content"--><!--android:text="M 12345678"--><!--android:textColor="@color/pankaj_results_text_color"--><!--android:textSize="@dimen/12sdp"--><!--android:textAlignment="viewEnd"/>-->
