--- a/app/src/main/res/layout/display.xml
+++ b/app/src/main/res/layout/display.xml
@@ -19,7 +19,7 @@
         android:textAlignment="viewStart"
         android:textSize="@dimen/_18sdp" />
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/editTextResult"
         style="@style/DisplayTextStyle"
         android:layout_width="match_parent"
@@ -30,6 +30,7 @@
         android:gravity="center|end"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
+        android:textSize="@dimen/_64sdp"
         android:text="0"/>
 
     <EditText
