cleanup started for equation

--- a/app/src/main/res/layout/display.xml
+++ b/app/src/main/res/layout/display.xml
@@ -31,6 +31,7 @@
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:textSize="@dimen/_64sdp"
+        android:editable="false"
         android:text="0"/>
 
     <EditText
@@ -45,6 +46,7 @@
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:text="0"
+        android:editable="false"
         android:gravity="center|end"
         android:textColor="@color/pankaj_results_text_color"
         android:textSize="@dimen/_30sdp" />
