cleanup started for equation

--- a/app/src/main/res/layout/display.xml
+++ b/app/src/main/res/layout/display.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -26,13 +26,13 @@
         android:layout_height="wrap_content"
         android:layout_weight=".8"
         android:background="@color/pankaj_pad_button_text_color_white"
-        android:maxLines="1"
+        android:editable="false"
         android:gravity="center|end"
+        android:maxLines="1"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:textSize="@dimen/_64sdp"
-        android:editable="false"
-        android:text="0"/>
+        android:text="0"
+        android:textSize="@dimen/_64sdp" />
 
     <EditText
         android:id="@+id/editTextEquation"
@@ -41,13 +41,16 @@
         android:layout_height="wrap_content"
         android:layout_weight=".2"
         android:background="@color/pankaj_pad_button_text_color_white"
+        android:editable="false"
+        android:gravity="center|end"
         android:inputType="text"
         android:maxLines="1"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:text="0"
-        android:editable="false"
-        android:gravity="center|end"
         android:textColor="@color/pankaj_results_text_color"
-        android:textSize="@dimen/_30sdp" />
+        android:textSize="@dimen/_30sdp"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:scrollHorizontally="true"
+        />
 </LinearLayout>
