--- a/app/src/main/res/layout/pad_standard.xml
+++ b/app/src/main/res/layout/pad_standard.xml
@@ -81,14 +81,15 @@
     <ImageButton
         android:id="@+id/buttonBack"
         style="@style/PadButtonStyle.Numeric.Operator"
-        android:onClick="calculateMe"
-        android:tag="BACK"
-        app:srcCompat="@drawable/ic_backspace_white_48dp"
-        android:padding="0dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="calculateMe"
+        android:padding="0dp"
+        android:tag="BACK"
+        app:layout_columnWeight="1"
         app:layout_gravity="fill"
-        app:layout_columnWeight="1"/>
+        app:layout_rowWeight="1"
+        app:srcCompat="@drawable/ic_backspace_white_Mid_48dp" />
 
 
     <!--<ImageButton android:id="@+id/previous"-->
