--- a/app/src/main/res/layout/pad_standard.xml
+++ b/app/src/main/res/layout/pad_standard.xml
@@ -85,11 +85,11 @@
         android:layout_height="wrap_content"
         android:onClick="calculateMe"
         android:padding="0dp"
+        android:src="@drawable/ic_backspace_white_mid_48dp"
         android:tag="BACK"
         app:layout_columnWeight="1"
         app:layout_gravity="fill"
-        app:layout_rowWeight="1"
-        app:srcCompat="@drawable/ic_backspace_white_mid_48dp" />
+        app:layout_rowWeight="1" />
 
 
     <!--<ImageButton android:id="@+id/previous"-->
