--- a/app/src/main/res/layout/pad_standard.xml
+++ b/app/src/main/res/layout/pad_standard.xml
@@ -84,8 +84,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="calculateMe"
-        android:padding="0dp"
         android:src="@drawable/ic_backspace_white_mid_48dp"
+        android:adjustViewBounds="false"
+        android:scaleType="centerInside"
+        android:padding="0dp"
         android:tag="BACK"
         app:layout_columnWeight="1"
         app:layout_gravity="fill"
