--- a/app/src/main/res/layout/pad_standard.xml
+++ b/app/src/main/res/layout/pad_standard.xml
@@ -70,6 +70,8 @@
         android:text="%"
         app:layout_columnWeight="1" />
 
+
+
     <!--<Button-->
     <!--android:id="@+id/buttonBack"-->
     <!--style="@style/PadButtonStyle.Numeric.Operator"-->
@@ -77,6 +79,23 @@
     <!--android:onClick="calculateMe"-->
     <!--android:tag="BACK"-->
     <!--android:text="Bk" />-->
+
+    <ImageButton
+        android:id="@+id/buttonBack"
+        style="@style/PadButtonStyle.Numeric.Operator"
+        android:onClick="calculateMe"
+        android:src="@drawable/ic_backspace_white_mid_48dp"
+        android:adjustViewBounds="false"
+        android:padding="0dp"
+        android:tag="BACK"
+        app:layout_columnWeight="1"
+        app:layout_gravity="fill"
+        app:layout_rowWeight="1"
+        android:layout_width="60dp"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:scaleType="fitCenter"/>
 
     <ImageButton
         android:id="@+id/buttonBack"
