--- a/app/src/main/res/layout/pad_standard.xml
+++ b/app/src/main/res/layout/pad_standard.xml
@@ -77,7 +77,7 @@
         android:src="@drawable/ic_backspace_white_mid_48dp"
         android:adjustViewBounds="false"
         android:scaleType="centerInside"
-        android:padding="0dp"
+        android:paddingBottom="0dp"
         android:tag="BACK"
         app:layout_columnWeight="1"
         app:layout_gravity="fill"
@@ -259,13 +259,13 @@
 
     <!--<TableRow>-->
 
-    <!--<Button-->
-        <!--android:id="@+id/button00"-->
-        <!--style="@style/PadButtonStyle.Numeric"-->
-        <!--android:onClick="calculateMe"-->
-        <!--android:tag="0"-->
-        <!--android:text="00"-->
-        <!--app:layout_columnWeight="1" />-->
+    <Button
+        android:id="@+id/button00"
+        style="@style/PadButtonStyle.Numeric"
+        android:onClick="calculateMe"
+        android:tag="00"
+        android:text="00"
+        app:layout_columnWeight="1" />
 
     <Button
         android:id="@+id/button0"
@@ -273,8 +273,7 @@
         android:onClick="calculateMe"
         android:tag="0"
         android:text="0"
-        app:layout_columnWeight="1"
-        app:layout_columnSpan="2"/>
+        app:layout_columnWeight="1"/>
 
     <Button
         android:id="@+id/buttonDecimal"
