--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,6 +57,8 @@
         <item name="fontFamily">sans-serif-light</item>
         <item name="android:paddingBottom">15dp</item>
         <item name="android:paddingTop">15dp</item>
+        <!--<item name="android:paddingBottom">15dp</item>-->
+        <!--<item name="android:paddingTop">15dp</item>-->
         <item name="android:layout_margin">0.1dp</item>
         <item name="android:layout_columnWeight">1</item>
         <item name="android:gravity">center</item>
