--- a/app/src/main/res/layout/pad_standard.xml
+++ b/app/src/main/res/layout/pad_standard.xml
@@ -74,10 +74,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="calculateMe"
-        android:src="@drawable/ic_backspace_white_mid_48dp"
+        android:src="@drawable/ic_backspace_pankaj"
         android:adjustViewBounds="false"
         android:scaleType="centerInside"
-        android:paddingBottom="0dp"
+        android:paddingBottom="@dimen/_15sdp"
         android:tag="BACK"
         app:layout_columnWeight="1"
         app:layout_gravity="fill"
