cleanup started for equation

--- a/app/src/main/res/layout/pad_standard_1.xml
+++ b/app/src/main/res/layout/pad_standard_1.xml
@@ -63,7 +63,7 @@
 
     <!--<TableRow>-->
     <Button
-        android:id="@+id/buttonInvert"
+        android:id="@+id/buttonPercentage"
         style="@style/PadButtonStyle.Numeric.Operator"
         android:onClick="calculateMe"
         android:tag="%"
