cleanup started for equation

--- a/app/src/main/res/layout/pad_standard_1.xml
+++ b/app/src/main/res/layout/pad_standard_1.xml
@@ -124,7 +124,7 @@
         style="@style/PadButtonStyle.Numeric.Operator"
         android:onClick="clearAll"
         android:tag="ALLCLEAR"
-        android:text="AC"
+        android:text="C"
         app:layout_columnWeight="1" />
 
     <Button
