cleanup started for equation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="pankaj_dark_brown">#443d4e</color>
     <color name="pankaj_dark_yellow">#906b2a</color>
     <color name="pankaj_dark_orange">#f86b00</color>
+    <color name="pankaj_dark_less_bright_orange">#f06d0a</color>
 
 
 
