--- a/app/src/main/res/menu/calculator_menu.xml
+++ b/app/src/main/res/menu/calculator_menu.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/MyTheme"
-        android:title="Theme"/>
-    <item
-        android:id="@+id/MyHelp"
-        android:title="Help" />
+<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_camera"
+            android:title="import" />
+        <item
+            android:id="@+id/nav_gallery"
+            android:title="gallery" />
+        <item
+            android:id="@+id/nav_slideshow"
+            android:title="slideshow" />
+        <item
+            android:id="@+id/nav_manage"
+            android:title="tools" />
+    </group>
 </menu>
+    <!--android:icon="@drawable/ic_menu_camera"-->
