--- a/app/src/main/res/layout/display.xml
+++ b/app/src/main/res/layout/display.xml
@@ -7,17 +7,37 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/editTextMemory"
-        style="@style/DisplayTextStyle.Memory"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight=".2"
-        android:background="@color/pankaj_pad_button_text_color_white"
-        android:editable="false"
-        android:text=""
-        android:textAlignment="viewStart"
-        android:textSize="@dimen/_18sdp" />
+        android:layout_marginBottom="0dp"
+        android:orientation="horizontal"
+        android:paddingBottom="0dp"
+        android:layout_weight="0.2">
+
+        <Button
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:text="..."
+            android:layout_gravity="center_vertical"
+            android:background="@color/pankaj_pad_numeric_background_color_white"
+            android:textColor="@color/pankaj_dark_orange"
+            android:textStyle="bold"
+            android:textSize="@dimen/_25sdp"/>
+
+        <EditText
+            android:id="@+id/editTextMemory"
+            style="@style/DisplayTextStyle.Memory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/pankaj_pad_button_text_color_white"
+            android:editable="false"
+            android:text="M 123"
+            android:textAlignment="viewStart"
+            android:textSize="@dimen/_18sdp" />
+
+
+    </LinearLayout>
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/editTextResult"
@@ -44,13 +64,12 @@
         android:editable="false"
         android:gravity="center|end"
         android:inputType="text"
+        android:marqueeRepeatLimit="marquee_forever"
         android:maxLines="1"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
+        android:scrollHorizontally="true"
         android:text="0"
         android:textColor="@color/pankaj_results_text_color"
-        android:textSize="@dimen/_28sdp"
-        android:marqueeRepeatLimit="marquee_forever"
-        android:scrollHorizontally="true"
-        />
+        android:textSize="@dimen/_28sdp" />
 </LinearLayout>
